# Overture

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: config.yml
crates/overture/: Cargo.toml
crates/overture-audio/: Cargo.toml
crates/overture-audio/src/: lib.rs
crates/overture-dsp/: Cargo.toml
crates/overture-dsp/src/: lib.rs
crates/overture-ipc/: Cargo.toml
crates/overture-ipc/src/: lib.rs
crates/overture-midi/: Cargo.toml
crates/overture-midi/src/: lib.rs
crates/overture-plugin/: Cargo.toml
crates/overture-plugin/src/: lib.rs
crates/overture-rt/: Cargo.toml
crates/overture-rt/src/: lib.rs
crates/overture/src/: lib.rs
crates/stardust-audio/: Cargo.toml
crates/stardust-audio/src/: lib.rs
crates/stardust-core/: Cargo.toml
crates/stardust-core/src/: lib.rs
crates/stardust-dsp/: Cargo.toml
crates/stardust-dsp/src/: envelope.rs  eq.rs  lib.rs
crates/stardust-ipc/: Cargo.toml
crates/stardust-ipc/src/: lib.rs
crates/stardust-midi/: Cargo.toml
crates/stardust-midi/src/: lib.rs
crates/stardust-patch/: Cargo.toml
crates/stardust-patch/src/: document.rs  lib.rs  types.rs  validate.rs
crates/stardust-patch/tests/: fixtures.rs  validation.rs
crates/stardust-patch/tests/fixtures/: casual.json  composite-block.json  piano-with-sends.json  split-transpose.json
crates/stardust-plugin/: Cargo.toml
crates/stardust-plugin/src/: clap.rs  lib.rs
crates/stardust-poc/: Cargo.toml
crates/stardust-poc/src/: lib.rs
crates/stardust-rt/: Cargo.toml
crates/stardust-rt/src/: lib.rs
crates/stardust-sfz/: Cargo.toml  README.md
crates/stardust-sfz/examples/: render_to_wav.rs
crates/stardust-sfz/src/: engine.rs  instrument.rs  lib.rs  sample.rs  sfz.rs
crates/stardust-show/: Cargo.toml
crates/stardust-show/src/: document.rs  lib.rs  types.rs  validate.rs
crates/stardust-show/tests/: fixtures.rs  validation.rs
crates/stardust-show/tests/fixtures/: lsoh.json
