[workspace]
resolver = "3"
members = [
    "crates/stardust-core",
    "crates/stardust-audio",
    "crates/stardust-midi",
    "crates/stardust-plugin",
    "crates/stardust-dsp",
    "crates/stardust-rt",
    "crates/stardust-ipc",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
repository = "https://github.com/StardustMT/stardust-core"
homepage = "https://github.com/StardustMT/stardust-core"
authors = ["Chase Condon <chase.condon@gmail.com>"]
readme = "README.md"

[workspace.dependencies]
# Audio
cpal = "0.16"

# MIDI
midir = "0.10"

# Real-time-safe primitives
crossbeam = "0.8"
crossbeam-channel = "0.5"
rtrb = "0.3"
parking_lot = "0.12"

# IPC / shared memory
shared_memory = "0.12"
memmap2 = "0.9"
bytemuck = { version = "1.16", features = ["derive"] }

# CLAP hosting
clack-host = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# Internal crate references
stardust-audio = { path = "crates/stardust-audio", version = "0.0.1" }
stardust-midi = { path = "crates/stardust-midi", version = "0.0.1" }
stardust-plugin = { path = "crates/stardust-plugin", version = "0.0.1" }
stardust-dsp = { path = "crates/stardust-dsp", version = "0.0.1" }
stardust-rt = { path = "crates/stardust-rt", version = "0.0.1" }
stardust-ipc = { path = "crates/stardust-ipc", version = "0.0.1" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = "line-tables-only"
