[package]
name = "stardust-audio"
description = "Real-time-safe audio I/O for stardust-core. Wraps CPAL with a higher-level API for live-performance applications (CoreAudio on macOS, WASAPI on Windows, ASIO on Windows opt-in)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
categories = ["multimedia::audio", "hardware-support"]
keywords = ["audio", "cpal", "real-time", "live-performance"]

[features]
default = []
asio = ["cpal/asio"]

[dependencies]
cpal.workspace = true
thiserror.workspace = true
tracing.workspace = true
# stardust-rt will be added when we feed the audio callback from a lock-free
# queue (Phase 1.3). For now the lib is a pure cpal wrapper.
