[package]
name = "stardust-dsp"
description = "Built-in audio DSP for stardust-core: EQ, reverb, compression, gain staging, basic limiter. Pure Rust, allocation-free in the audio thread."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
categories = ["multimedia::audio", "no-std::no-alloc"]
keywords = ["dsp", "audio", "eq", "reverb", "compressor"]

[dependencies]
stardust-midi = { path = "../stardust-midi", version = "0.0.1" }
# stardust-rt isn't a direct dep — the synth itself is queue-agnostic;
# the integration layer (Phase 1.5) drains the SPSC and feeds events in.
