[package]
name = "stardust-plugin"
description = "VST3 and CLAP plugin hosting for stardust-core. VST3 via a C++ shim around the Steinberg SDK, called from Rust via FFI. CLAP via clack-host. Sandboxed (out-of-process) hosting lives in stardust-ipc; this crate covers the in-process API surface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
categories = ["multimedia::audio"]
keywords = ["vst3", "clap", "audio-plugin", "plugin-host"]

[features]
default = ["vst3", "clap"]
vst3 = ["dep:cc"]
clap = ["dep:clack-host"]

[dependencies]
clack-host = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
stardust-rt.workspace = true

[build-dependencies]
cc = { version = "1.1", optional = true }
